@startuml
title BlaiseConnect - Structure scolaire
left to right direction
hide circle
skinparam linetype ortho
skinparam shadowing false

entity school_years #E0E0E0 {
  * id : uuid <<PK>>
  * name : varchar(20) <<UQ>>
  * start_date : date
  * end_date : date
  * is_current : boolean
  closed_at : timestamptz
  closed_by_account_id : uuid <<FK>>
}

entity reporting_periods #E0E0E0 {
  * id : uuid <<PK>>
  * school_year_id : uuid <<FK>>
  * name : varchar(100)
  * start_date : date
  * end_date : date
}

entity class_levels #E0E0E0 {
  * id : uuid <<PK>>
  * code : class_level_code_enum <<UQ>>
  * name : varchar(100)
  * education_stage : education_stage_enum
  * display_order : smallint
  * is_active : boolean
}

entity classes #BBDEFB {
  * id : uuid <<PK>>
  * school_year_id : uuid <<FK>>
  * class_level_id : uuid <<FK>>
  * main_teacher_id : uuid <<FK>>
  * group_label : varchar(30)
  capacity : smallint
}

entity student_enrollments #FFF9C4 {
  * id : uuid <<PK>>
  * student_id : uuid <<FK>>
  * class_id : uuid <<FK>>
  * start_date : date
  end_date : date
  end_reason : enrollment_end_reason_enum
}

entity subjects #C8E6C9 {
  * id : uuid <<PK>>
  * name : varchar(100) <<UQ>>
  description : text
  * is_active : boolean
}

entity class_subjects #C8E6C9 {
  * id : uuid <<PK>>
  * class_id : uuid <<FK>>
  * subject_id : uuid <<FK>>
  * coefficient : numeric(6,2)
}

entity teacher_assignments #FFE0B2 {
  * id : uuid <<PK>>
  * teacher_id : uuid <<FK>>
  * class_subject_id : uuid <<FK>>
  * start_date : date
  end_date : date
}

entity students #BBDEFB {
  * id : uuid <<PK>>
}

entity teachers #C8E6C9 {
  * id : uuid <<PK>>
}

school_years ||--o{ reporting_periods
school_years ||--o{ classes
class_levels ||--o{ classes
teachers ||--o{ classes : main teacher
students ||--o{ student_enrollments
classes ||--o{ student_enrollments
classes ||--o{ class_subjects
subjects ||--o{ class_subjects
teachers ||--o{ teacher_assignments
class_subjects ||--o{ teacher_assignments

note bottom of teacher_assignments
Une matière de classe possède au plus
un enseignant sur une même plage de dates.
end note
@enduml
